--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       <input id="input" autocomplete="off" /><button>Send</button>
     </form>
     <script src="/socket.io/socket.io.js"></script>
-
-    <script>
+    <script src="libs.js" charset="utf-8"></script>
+    <script type="text/javascript">
       var socket = io();
-      
+
       var messages = document.getElementById('messages');
       var form = document.getElementById('form');
       var input = document.getElementById('input');
@@ -37,11 +37,8 @@
         }
       });
 
-      socket.on('chat message', function(msg) {
-        var item = document.createElement('li');
-        item.textContent = msg;
-        messages.appendChild(item);
-        window.scrollTo(0, document.body.scrollHeight);
+      socket.on('chat message', function(msg, id) {
+        criarMensagem(`${id}: ${msg}`)
       });
     </script>
   </body>
